2011-07-03  Dominic Cooney  <dominicc@chromium.org>

The value property of an indeterminate progress element should be zero
        https://bugs.webkit.org/show_bug.cgi?id=63861

        Reviewed by Kent Tamura.

        Updates test result, and adds a test for setting value < 0.

        * fast/dom/HTMLProgressElement/script-tests/set-progress-properties.js:
        * fast/dom/HTMLProgressElement/set-progress-properties-expected.txt:
2011-07-03  Dominic Cooney  <dominicc@chromium.org>

        The value property of an indeterminate progress element should be zero
        https://bugs.webkit.org/show_bug.cgi?id=63861

        Reviewed by Kent Tamura.

        Test: fast/dom/HTMLProgressElement/set-progress-properties.html

        * html/HTMLProgressElement.cpp:
        (WebCore::HTMLProgressElement::value):

Canonical link: https://commits.webkit.org/79617@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90351 268f45cc-cd09-0410-ab3c-d52691b4dbfc